Good start to basic page structure of FV

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -43,6 +43,8 @@ Items can be selected, and depending on the page, different options may be appli
 	</div>
 </header>
 
+<FullscreenViewer/>
+
 <main>
 	<div class="load-div" style="@topLoader.Visibility.Style" @onmouseover="@topLoader.AddContent" @onscroll="@topLoader.AddContent"></div>
 	
