--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
 
     @* Caching frequently used CSS files here. *@
     <link href="css/Components/NavMenu.css" rel="stylesheet"/>
+    <link href="css/Components/FullscreenViewer.css" rel="stylesheet"/>
     
     <link href="css/Components/LibraryContentViewer/LibraryContentViewer.css" rel="stylesheet"/>
     <link href="css/Components/LibraryContentViewer/Thumbnail.css" rel="stylesheet"/>
