--- a/MemoryMosaic/Styles/Components/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer.scss
@@ -21,29 +21,29 @@
 			width: 25%;
 			height: 100%;
 			top: 0;
-			
+
 
 			&:hover {
 				cursor: pointer;
-				
+
 				> .iconBtn {
 					opacity: 1;
 					transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 				}
 			}
-			
+
 			&:first-of-type {
 				left: 0;
-				
+
 				> .iconBtn { left: 28px }
 			}
-			
-			&:last-of-type { 
+
+			&:last-of-type {
 				right: 0;
-				
+
 				> .iconBtn { right: 28px }
 			}
-			
+
 			> .iconBtn {
 				position: absolute;
 				top: 50%;
@@ -76,43 +76,51 @@
 	> #info {
 		@include flex-col;
 		height: 100%;
-		border-left: 2px solid white;
 		transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-		
+
 		&.visible {
 			opacity: 1;
 			width: 400px;
+			margin: 0;
+			border-left: 2px solid white;
+			padding: 8px;
 		}
-		
+
 		&.hidden {
 			opacity: 0;
 			width: 0;
+			margin: 0;
+			border: 0;
+			padding: 0;
 		}
-		
-		> #infoHeader {
+
+		> span {
+			margin-top: 12px;
+			margin-bottom: 28px;
+			font-size: 18px;
+		}
+
+		> div {
 			@include flex-row;
-			margin-left: 4px;
-			margin-top: 4px;
-			
-			> span {
-				font-size: 18px;
-				margin-left: 4px;
+			margin-bottom: 24px;
+
+			> .material-icons-outlined {
+				margin-right: 12px;
 			}
 		}
-		
-		
-		
+
 		> textarea {
 			@include available-width;
 			border: 1px solid white;
-			margin: 20px 8px 8px;
+			margin-top: 12px;
+			margin-bottom: 12px;
 			background-color: black;
 			font-size: 16px;
 			min-height: 1.2em;
 			height: 3em;
 			max-height: 10em;
 			resize: vertical;
-			
+
 			&:focus {
 				border: 1px solid #0080ff;
 				outline: 1px solid #0080ff;
