Info Sidebar's width is now constant, but its right margin is modified

--- a/MemoryMosaic/Shared/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer.razor
@@ -8,7 +8,7 @@
 		</div>
 
 		<div id="item">
-			<img src="mm_library/IMG_20230705_180622.jpg" alt=""/>
+			<img src="mm_library/427520_20230320000602_1.png" alt=""/>
 		</div>
 
 		<div class="sideButton">
