--- a/MemoryMosaic/Shared/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer.razor
@@ -22,6 +22,7 @@
 		<div title="Date Taken">
 			<MaterialIcon Icon="photo_camera"/>
 			<span>@DateTime.Now</span>
+			<IconButton Icon="edit"/>
 		</div>
 
 		<div title="Date Added">
@@ -31,7 +32,8 @@
 		
 		<div title="Date Added">
         	<MaterialIcon Icon="image"/>
-        	<span>text</span>
+			<span>text</span>
+			<IconButton Icon="edit"/>
         </div>
 
 		<textarea autocomplete="off" autocorrect="on" spellcheck="true" placeholder="Add a description"></textarea>
