Spans in info div now show ... if they're too long.

--- a/MemoryMosaic/Shared/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer.razor
@@ -30,7 +30,7 @@
 			<span>@DateTime.Now</span>
 		</div>
 		
-		<div title="Date Added">
+		<div>
         	<MaterialIcon Icon="image"/>
 			<span>text</span>
 			<IconButton Icon="edit"/>
