--- a/MemoryMosaic/Styles/Components/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer.scss
@@ -101,6 +101,13 @@
 
 			> span {
 				margin-right: 12px;
+				
+				&:nth-of-type(2) {
+					width: 250px;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
 			}
 		}
 
