Fix LCV not having @namespace

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -6,6 +6,7 @@ Items can be selected, and depending on the page, different options may be appli
 @inherits Component
 @inject NavigationManager navigationManager
 @using System.IO.Compression
+@namespace MemoryMosaic.Shared.LibraryContentViewer
 
 @if (Content.Count == 0)
 {
