--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -44,7 +44,7 @@ Items can be selected, and depending on the page, different options may be appli
 	</div>
 </header>
 
-<FullscreenViewer/>
+<FullscreenViewer Content="@Content"/>
 
 <main>
 	<div class="load-div" style="@topLoader.Visibility.Style" @onmouseover="@topLoader.AddContent" @onscroll="@topLoader.AddContent"></div>
