--- a/MemoryMosaic/Styles/Components/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer.scss
@@ -63,12 +63,16 @@
 
 			background-color: purple;
 
-			> img {
+			> img, > video {
 				width: auto;
 				height: auto;
 				max-width: 100%;
 				max-height: 100%;
 			}
+
+			//Hide spinning loading icon in Chrome. https://stackoverflow.com/a/62786714
+			video::-webkit-media-controls { visibility: hidden; }
+			video::-webkit-media-controls-enclosure { visibility: visible; }
 		}
 	}
 
