Move FullscreenViewer files to FullscreenViewer/

--- a/MemoryMosaic/_Imports.razor
+++ b/MemoryMosaic/_Imports.razor
@@ -12,4 +12,5 @@
 @using MemoryMosaic.Shared.Import
 @using MemoryMosaic.Shared.Input
 @using MemoryMosaic.Shared.LibraryContentViewer
+@using MemoryMosaic.Shared.FullscreenViewer
 @using MemoryMosaic.Shared.Modal
