Start work on VideoPlayer

--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -3,4 +3,6 @@
 
 <title>Test - MM</title>
 
-<LibraryContentViewer DefaultGroupBy="GroupBy.Day" NoItemsText="no items"/>
+@* <LibraryContentViewer DefaultGroupBy="GroupBy.Day" NoItemsText="no items"/> *@
+
+<VideoPlayer/>
