--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -63,16 +63,12 @@
 
 			background-color: purple;
 
-			> img, > video {
+			> img {
 				width: auto;
 				height: auto;
 				max-width: 100%;
 				max-height: 100%;
 			}
-
-			//Hide spinning loading icon in Chrome. https://stackoverflow.com/a/62786714
-			video::-webkit-media-controls { visibility: hidden; }
-			video::-webkit-media-controls-enclosure { visibility: visible; }
 		}
 	}
 
