--- a/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
@@ -1,6 +1,6 @@
 ﻿
 <div id="video-player">
-	<video id="video" src="mm_library/VID_20230706_095038.mp4"></video>
+	<video id="video" src="mm_library/VID_20230706_095038.mp4" tabindex="0"></video>
 </div>
 
 @code {
