--- a/MemoryMosaic/Styles/Components/FullscreenViewer/VideoPlayer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/VideoPlayer.scss
@@ -14,6 +14,11 @@
 	video {
 		width: 100%;
 		height: 100%;
+		
+		&:focus {
+			border: none;
+			outline: none;
+		}
 
 		//Hide spinning loading icon in Chrome. https://stackoverflow.com/a/62786714
 		&::-webkit-media-controls { visibility: hidden; }
