Implement slider control, which works beautifully

--- a/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
@@ -1,6 +1,11 @@
 ﻿
 <div id="video-player">
 	<video id="video" src="mm_library/VID_20230706_095038.mp4" tabindex="0"></video>
+	
+	<div id="controls">
+		<IconButton Icon="play_arrow"/>
+		<input type="range" min="0" value="0" step="any"/>
+	</div>
 </div>
 
 @code {
