--- a/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
@@ -8,7 +8,7 @@
 		<input id="seek-slider" type="range" min="0" value="0" step="any" tabindex="-1"/>
 		
 		<div>
-			<IconButton ID="mute-btn" Icon="volume_up"/>
+			<IconButton ID="mute-btn" OnClick="@(() => JSRuntime.InvokeVoidAsync("toggleMute"))" Icon="volume_up"/>
 			<input id="volume-slider" type="range" min="0" max="1" value="1" step="any" tabindex="-1"/>
 		</div>
 		
