Add Path parameter to VideoPlayer

--- a/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
@@ -1,7 +1,7 @@
 @inject IJSRuntime JSRuntime
 
 <div id="video-player">
-	<video id="video" src="mm_library/VID_20230706_095038.mp4" tabindex="0"></video>
+	<video id="video" src="@Path" tabindex="0"></video>
 	
 	<div id="controls">
 		<IconButton OnClick="@(() => JSRuntime.InvokeVoidAsync("togglePlaying"))" Icon="play_arrow"/>
@@ -17,5 +17,5 @@
 </div>
 
 @code {
-	
+	[Parameter, EditorRequired] public string Path { get; set; } = null!;
 }
