--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -3,6 +3,4 @@
 
 <title>Test - MM</title>
 
-@* <LibraryContentViewer DefaultGroupBy="GroupBy.Day" NoItemsText="no items"/> *@
-
-<VideoPlayer/>
+<LibraryContentViewer DefaultGroupBy="GroupBy.Day" NoItemsText="no items"/>
