Side divs now have top and bottom margin

--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -17,9 +17,9 @@
 
 		> .sideButton {
 			position: absolute;
-			width: 25%;
-			height: 100%;
-			top: 0;
+			width: 20%;
+			top: 80px;
+			bottom: 80px;
 			z-index: 99999;
 
 			&:hover {
