--- a/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/VideoPlayer.razor
@@ -7,7 +7,13 @@
 		<IconButton OnClick="@(() => JSRuntime.InvokeVoidAsync("togglePlaying"))" Icon="pause"/>
 		<input id="seek-slider" type="range" min="0" value="0" step="any" tabindex="-1"/>
 		
-		<div>
+		<div id="time">
+			<span id="currentTime">0:00</span>
+			<span>/</span>
+			<span id="duration">0:00</span>
+		</div>
+		
+		<div id="volume">
 			<IconButton ID="mute-btn" OnClick="@(() => JSRuntime.InvokeVoidAsync("toggleMute"))" Icon="volume_up"/>
 			<input id="volume-slider" type="range" min="0" max="1" value="1" step="any" tabindex="-1"/>
 		</div>
